manifests/host-hello.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: host-hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: host-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  namespace: host-hello
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: host-hello-httproute
  namespace: host-hello
spec:
  parentRefs:
    - name: gateway
      namespace: host-gateway
      sectionName: http
  hostnames:
    - "host-hello.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-app-service
          port: 80
